[package]
name = "canvast"
version = "0.1.0"
authors = ["Luffbee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.15.0"
rand = "0.7.2"
zip = "0.5.3"
actix-web = "1.0"
serde_derive = "1.0.102"
serde = "1.0.102"
serde_json = "1.0.41"
regex = "1.3.1"
lazy_static = "1.4.0"
base64 = "0.11.0"
time = "0.1.42"
thiserror = "1.0.4"
diesel = "1.4.3"
