[package]
name = "canvast"
version = "0.1.0"
authors = ["Luffbee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.15.2"
rand = "0.7.2"
zip = "0.5.3"
actix-web = "2.0.0"
serde_derive = "1.0.104"
serde = "1.0.104"
serde_json = "1.0.44"
regex = "1.3.1"
lazy_static = "1.4.0"
base64 = "0.11.0"
time = "0.1.42"
thiserror = "1.0.9"
diesel = "1.4.3"
parking_lot = "0.10.0"
hex = "0.4.0"
env_logger = "0.7.1"
log = "0.4.8"
actix-rt = "1.0.0"
futures = "0.3.1"
async-trait = "0.1.22"
